--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 
 <!-- COMPETITION -->
-<div class="row"> <div class="col-md-3"><img style="height:132px;" alt src="competition/images/folding.jpg" style="width:80%"> </div><div class="col-md-9"><h4>Cloth Manipulation and Perception Competition</h4><h5>Irene Garcia-Camacho, Julia Borras and Guillem Alenya</
+<div class="row"> <div class="col-md-3"><img style="height:132px;" alt src="competition/images/folding.jpg" style="width:85%"> </div><div class="col-md-9"><h4>Cloth Manipulation and Perception Competition</h4><h5>Irene Garcia-Camacho, Júlia Borràs and Guillem Alenyà</
 h5><h5>in <i>arXiv</i> </h5><h5>
 <a href="https://igarcica.github.io/competition/">Project Page</a>&nbsp;&nbsp;&nbsp;
 <a href="https://igarcica.github.io/competition/paper.pdf">Paper</a>&nbsp;&nbsp;&nbsp;
@@ -62,7 +62,7 @@ h5><h5>in <i>arXiv</i> </h5><h5>
 <a onclick="javascript:ShowHide('#bibtex_competition')" href="javascript:;">Bibtex</a></h5>
 <pre class='citation' id='bibtex_competition' style="DISPLAY: none">
 @inproceedings{garciacamacho2025clothcompetition,
-    Author = {_Garcia-Camacho, Irene and Borras, Julia and Alenya, Guillem}
+    Author = {_Garcia-Camacho, Irene and Borràs, Júlia and Alenyà, Guillem}
     Title = {Cloth Manipulation and Perception Competition},
     Year = {2025},
     booktitle = {arXiv},
@@ -70,17 +70,39 @@ h5><h5>in <i>arXiv</i> </h5><h5>
 </pre>
 </div></div>
 
+  <!-- REVIEW -->
+  <div class="row"> <div class="col-md-3"><img style="height:132px;" alt src="benchmarks/images/" style="width:80%"> </div><div class="col-md-9"><h4>Unfolding the Literature: A Review of Robotic Cloth Manipulation</h4><h5>Alberta Longhini, Yufei Wang, Irene Garcia-Camacho, David Blanco-Mulero, Marco Moletta, Michael Welle, Guillem Alenyà, Hang Yin, Zackory Erickson, David Held, Júlia Borràs, and Danica Kragic</
+    h5><h5>in <i>Annual Review of Control, Robotics, and Autonomous Systems</i> </h5><h5>
+    <!-- <a href="https://ral-si.github.io/cloth-benchmark/">Project Page</a>&nbsp;&nbsp;&nbsp; -->
+    <a href="https://www.annualreviews.org/content/journals/10.1146/annurev-control-022723-033252">Paper</a>&nbsp;&nbsp;&nbsp;
+    <a onclick="javascript:ShowHide('#bibtex_review')" href="javascript:;">Bibtex</a></h5>
+    <pre class='citation' id='bibtex_review' style="DISPLAY: none">
+    @article{longhini2025review,
+        author = "Longhini, Alberta and Wang, Yufei and Garcia-Camacho, Irene and Blanco-Mulero, David and Moletta, Marco and Welle, Michael and Alenyà, Guillem and Yin, Hang and Erickson, Zackory and Held, David and Borràs, Júlia and Kragic, Danica",
+        title = "Unfolding the Literature: A Review of Robotic Cloth Manipulation", 
+        journal= "Annual Review of Control, Robotics, and Autonomous Systems",
+        year = "2025",
+        volume = "8",
+        number = "Volume 8",
+        pages = "295-322",
+        doi = "https://doi.org/10.1146/annurev-control-022723-033252",
+        url = "https://www.annualreviews.org/content/journals/10.1146/annurev-control-022723-033252",
+        publisher = "Annual Reviews",
+        issn = "2573-5144",
+        type = "Journal Article"
+      }
+    </pre>
+    </div></div>
+
+<!-- HCOS -->
 <div class="row"> <div class="col-md-3"><img style="height:132px;" alt src="hcos/images/hcos.png" style="width:80%"> </div><div class="col-md-9"><h4>Household cloth object set: Fostering benchmarking in deformable object manipulation</h4><h5>Irene Garcia-Camacho, Júlia Borràs, Berk Calli, Adam Norton and Guillem Alenyà</
-  h5><h5>in <i>arXiv</i> </h5><h5>
-  <a href="https://igarcica.github.io/hcos/">Project Page</a>&nbsp;&nbsp;&nbsp;
+  h5><h5>in <i>IEEE Robotics and Automation Letters</i> </h5><h5>
+  <a href="https://www.iri.upc.edu/groups/perception/#HouseholdClothSet">Project Page</a>&nbsp;&nbsp;&nbsp;
   <a href="https://ieeexplore.ieee.org/document/9732698">Paper</a>&nbsp;&nbsp;&nbsp;
-  <!-- <a href="https://igarcica.github.io/competition/paper.pdf">Supplementary</a>&nbsp;&nbsp;&nbsp; -->
-  <!-- <a href="">Video</a>&nbsp;&nbsp;&nbsp;
-  <a href="">Dataset</a>&nbsp;&nbsp;&nbsp; -->
   <a onclick="javascript:ShowHide('#bibtex_hcos')" href="javascript:;">Bibtex</a></h5>
   <pre class='citation' id='bibtex_hcos' style="DISPLAY: none">
   @article{garciacamacho2022hcos,
-      Author = {_Garcia-Camacho, and Borras, Julia and Calli, Berk and Norton, Adam and Alenya, Guillem}
+      Author = {_Garcia-Camacho, and Borràs, Júlia and Calli, Berk and Norton, Adam and Alenyà, Guillem}
       Title = {Household cloth object set: Fostering benchmarking in deformable object manipulation},
       journal = {IEEE Robotics and Automation Letters}, 
       Year = {2022},
@@ -92,6 +114,27 @@ h5><h5>in <i>arXiv</i> </h5><h5>
   }
   </pre>
   </div></div>
+
+  <!-- BENCHMARKING -->
+  <div class="row"> <div class="col-md-3"><img style="height:132px;" alt src="benchmarks/images/tablecloth_eval.pdf" style="width:80%"> </div><div class="col-md-9"><h4>Benchmarking bimanual cloth manipulation</h4><h5>Irene Garcia-Camacho, Martina Lippi, Michael C. Welle, Hang Yin, Rika Antanova, Anastasiia Varava, Júlia Borràs, Carme Torras, Alessandro Marino, Guillem Alenyà and Danica Kragic</
+    h5><h5>in <i>IEEE Robotics and Automation Letters</i> </h5><h5>
+    <a href="https://ral-si.github.io/cloth-benchmark/">Project Page</a>&nbsp;&nbsp;&nbsp;
+    <a href="https://ieeexplore.ieee.org/document/8957044">Paper</a>&nbsp;&nbsp;&nbsp;
+    <a onclick="javascript:ShowHide('#bibtex_benchmarks')" href="javascript:;">Bibtex</a></h5>
+    <pre class='citation' id='bibtex_benchmarks' style="DISPLAY: none">
+    @article{garciacamacho2020benchmarking,
+        author={Garcia-Camacho, Irene and Lippi, Martina and Welle, Michael C. and Yin, Hang and Antonova, Rika and Varava, Anastasiia and Borras, Julia and Torras, Carme and Marino, Alessandro and Alenyà, Guillem and Kragic, Danica},
+        journal={IEEE Robotics and Automation Letters}, 
+        title={Benchmarking Bimanual Cloth Manipulation}, 
+        year={2020},
+        volume={5},
+        number={2},
+        pages={1111-1118},
+        keywords={Task analysis;Benchmark testing;Grasping;Clothing;Protocols;Service robots;Cooperating robots;performance evaluation and benchmarking},
+        doi={10.1109/LRA.2020.2965891}
+    }
+    </pre>
+    </div></div>
 
 <br />
 <!-- 
