Test competition website

--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
         </div>
         <div class="col-md-9">
             <h1 style="text-align:left; margin-left:150px;">Irene Garcia-Camacho</h1>
-            <h2 style="text-align:left; margin-left:150px;">PhD Candidate - Automatic Control, Robotics and Computer Vision</h2>
+            <h2 style="text-align:left; margin-left:150px;">PhD Candidate - Automatic Control, Robotics and Vision</h2>
             <h4 style="margin-left:150px">Email: <a href="mailto:igarcia@iri.upc.edu">igarcia@iri.upc.edu</a>
             <!-- <h4 style="margin-left:150px">Zurich, Switzerland</h4> -->
+            <h5 class="about">I am a PhD student at the <a href="http://www.iri.upc.edu/">Institut de Robótica i Informàtica Industrial (CSIC-UPC)</a> under the supervision of <a href="https://www.iri.upc.edu/people/galenya/">Guillem Alenyà</a> and <a href="https://www.iri.upc.edu/staff/jborras">Júlia Borràs</a>.</a></h5>
+            <h5 class="about">My research focuses on benchmarking cloth manipulation.</h5>
         </div>
     </div>
 </div>
@@ -43,19 +45,18 @@
 
 <div class="container">
 <!--<div class="content">-->
-<h3>About me</h3>
+<!-- <h3>About me</h3>
 <h5 class="about">I am a PhD student at the <a href="http://www.iri.upc.edu/">Institut de Robótica i Informàtica Industrial (CSIC-UPC)</a> under the supervision of <a href="https://www.iri.upc.edu/people/galenya/">Guillem Alenyà</a> and <a href="https://www.iri.upc.edu/staff/jborras">Júlia Borràs</a>.</a></h5><h5 class="about">My research focuses on benchmarking cloth manipulation.</h5>
-<!-- <h5 class="about">I am a Research Scientist at Google DeepMind, working on Digital Humans and Generative AI. Previously, I completed my PhD at <a href="http://www.iri.upc.edu/">IRI-UPC</a> under the supervision of <a href="http://www.iri.upc.edu/people/fmoreno/">Francesc Moreno-Noguer</a> and <a href="http://www.iri.upc.edu/people/galenya/">Guillem Aleny&agrave;</a>. During my PhD, I interned at Google Research with <a href="https://scholar.google.com/citations?user=tJlD24EAAAAJ&hl=de">Thiemo Alldieck</a> and <a href="https://scholar.google.com/citations?user=af68sKkAAAAJ">Mihai Zanfir</a> in 2022 and at Meta with <a href="https://vision.in.tum.de/members/lingni">Lingni Ma</a> in 2021. I have also been a visitor at Naver Labs Europe with <a href="https://europe.naverlabs.com/people_user/Gregory-Rogez/">Gr&eacute;gory Rogez</a>. Before starting my PhD, I visited <a href="http://www.cs.utoronto.ca/~fidler/">Sanja Fidler</a> at University of Toronto in 2017 and worked as a data scientist in <a href="http://www.intellisense.io/">IntelliSense.io</a>.</h5><h5 class="about">My research is in areas of computer vision and machine learning, including modelling and reconstruction of 3D human bodies and hands.</h5> -->
-<br />
+<br /> -->
 
 <h3>Publications</h3>
 <br />
 
 
 <!-- COMPETITION -->
-<div class="row"> <div class="col-md-3"><img style="height:132px;" alt src="competition/images/folding.jpg" style="width:85%"> </div><div class="col-md-9"><h4>Cloth Manipulation and Perception Competition</h4><h5>Irene Garcia-Camacho, Júlia Borràs and Guillem Alenyà</
+<div class="row"> <div class="col-md-3"><img style="height:132px;" alt src="competition/images/folding.jpg" style="width:90%"> </div><div class="col-md-9"><h4>Cloth Manipulation and Perception Competition</h4><h5>Irene Garcia-Camacho, Júlia Borràs and Guillem Alenyà</
 h5><h5>in <i>arXiv</i> </h5><h5>
-<a href="https://igarcica.github.io/competition/">Project Page</a>&nbsp;&nbsp;&nbsp;
+<a href="https://igarcica.github.io/ClothManipulationCompetition/competition">Project Page</a>&nbsp;&nbsp;&nbsp;
 <a href="https://igarcica.github.io/competition/paper.pdf">Paper</a>&nbsp;&nbsp;&nbsp;
 <!-- <a href="https://igarcica.github.io/competition/paper.pdf">Supplementary</a>&nbsp;&nbsp;&nbsp; -->
 <!-- <a href="">Video</a>&nbsp;&nbsp;&nbsp;
@@ -96,7 +97,7 @@ h5><h5>in <i>arXiv</i> </h5><h5>
     </div></div>
 
 <!-- HCOS -->
-<div class="row"> <div class="col-md-3"><img style="height:132px;" alt src="hcos/images/hcos.png" style="width:80%"> </div><div class="col-md-9"><h4>Household cloth object set: Fostering benchmarking in deformable object manipulation</h4><h5>Irene Garcia-Camacho, Júlia Borràs, Berk Calli, Adam Norton and Guillem Alenyà</
+<div class="row"> <div class="col-md-3"><img style="height:132px;" alt src="hcos/images/hcos.png" style="width:60%"> </div><div class="col-md-9"><h4>Household cloth object set: Fostering benchmarking in deformable object manipulation</h4><h5>Irene Garcia-Camacho, Júlia Borràs, Berk Calli, Adam Norton and Guillem Alenyà</
   h5><h5>in <i>IEEE Robotics and Automation Letters</i> </h5><h5>
   <a href="https://www.iri.upc.edu/groups/perception/#HouseholdClothSet">Project Page</a>&nbsp;&nbsp;&nbsp;
   <a href="https://ieeexplore.ieee.org/document/9732698">Paper</a>&nbsp;&nbsp;&nbsp;
@@ -137,14 +138,11 @@ h5><h5>in <i>arXiv</i> </h5><h5>
     </pre>
     </div></div>
 
-    <!-- COMPETITION -->
-<div class="row"> <div class="col-md-3"><img style="height:132px;" alt src="competition/images/folding.jpg" style="width:85%"> </div><div class="col-md-9"><h4>Cloth Manipulation and Perception Competition</h4><h5>Irene Garcia-Camacho, Júlia Borràs and Guillem Alenyà</
+  <!-- COMPETITION -->
+  <!-- <div class="row"> <div class="col-md-3"><img style="height:132px;" alt src="competition/images/folding.jpg" style="width:85%"> </div><div class="col-md-9"><h4>Cloth Manipulation and Perception Competition</h4><h5>Irene Garcia-Camacho, Júlia Borràs and Guillem Alenyà</
   h5><h5>in <i>arXiv</i> </h5><h5>
   <a href="https://igarcica.github.io/competition/">Project Page</a>&nbsp;&nbsp;&nbsp;
   <a href="https://igarcica.github.io/competition/paper.pdf">Paper</a>&nbsp;&nbsp;&nbsp;
-  <!-- <a href="https://igarcica.github.io/competition/paper.pdf">Supplementary</a>&nbsp;&nbsp;&nbsp; -->
-  <!-- <a href="">Video</a>&nbsp;&nbsp;&nbsp;
-  <a href="">Dataset</a>&nbsp;&nbsp;&nbsp; -->
   <a onclick="javascript:ShowHide('#bibtex_competition')" href="javascript:;">Bibtex</a></h5>
   <pre class='citation' id='bibtex_competition' style="DISPLAY: none">
   @inproceedings{garciacamacho2025clothcompetition,
@@ -154,7 +152,7 @@ h5><h5>in <i>arXiv</i> </h5><h5>
       booktitle = {arXiv},
   }
   </pre>
-  </div></div>
+  </div></div> -->
 
 <br />
 <!-- 
